--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
 >
-
-    <Button
+    <!-- to center the content -->
+    <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/send_alert"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:id="@+id/button"
-    />
+            android:layout_centerInParent="true"
+    >
+        <TextView
+                android:id="@+id/tvMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/placeholder"
+        />
+        <!-- to place the buttons -->
+        <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvMsg"
+        >
+            <Button
+                    android:id="@+id/btnSendAlert"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/send_alert"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+            />
+
+            <Button
+                    android:id="@+id/btnConfirmAlert"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/confirm_alert"
+            />
+
+            <Button
+                    android:id="@+id/btnCancelAlert"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cancel_alert"
+            />
+        </RelativeLayout>
+    </RelativeLayout>
+
 
 </RelativeLayout>
 
